--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "express-handlebars": "^4.0.4",
     "express-session": "^1.17.1",
     "fs-extra": "^9.0.1",
+    "googleapis": "^74.1.0",
     "method-override": "^3.0.0",
     "moment": "^2.27.0",
     "mongoose": "^5.9.19",
     "morgan": "^1.10.0",
+    "nodemailer": "^6.6.1",
     "passport": "^0.4.1",
     "passport-google-oauth20": "^2.0.0",
     "sentiment": "^5.0.2",
